--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -82,7 +82,7 @@ jobs:
           source env/bin/activate
           pip install --upgrade pip
           pip install -r requirements.txt
-          pip install gunicorn
+          pip install gunicorn pymysql
 
     - name: 5. Configure Django Settings
       uses: appleboy/ssh-action@v1.2.2
