--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -82,7 +82,9 @@ jobs:
           source env/bin/activate
           pip install --upgrade pip
           pip install -r requirements.txt
-          pip install gunicorn pymysql sentence-transformers
+          pip install gunicorn pymysql
+          pip install --no-cache-dir torch --index-url https://download.pytorch.org/whl/cpu
+          pip install --no-cache-dir sentence-transformers
 
     - name: 5. Configure Django Settings
       uses: appleboy/ssh-action@v1.2.2
